...
        android:alpha="0.4"
        tools:tint="@color/black"
        />


    <TextView
        android:id="@+id/item_list_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/black"
        android:textSize="20sp"
...
